@@ -1,5 +1,12 @@
 2001-11-01  Mark McLoughlin  <mark@skynet.ie>
 
+	* applet-object.c: (applet_object_panel_quit), (applet_object_new):
+	free panel CORBA refs.
+
+	* applet-widget.c: kill applet_count stuff.
+
+2001-11-01  Mark McLoughlin  <mark@skynet.ie>
+
 	* applet-object.c: (impl_GNOME_Applet2_back_change): add case
 	for PANEL_BACK_NONE.
 
